--- a/src/main/resources/templates/adm/article/list.html
+++ b/src/main/resources/templates/adm/article/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html layout:decorate="~{/layout/layout}">
+<html layout:decorate="~{/adm/layout/layout}">
 
 <head>
     <title>게시물 리스트</title>
@@ -10,11 +10,14 @@
 
     <ul>
         <li th:each="article : ${articles}">
+            <input type="checkbox">
             <a th:href="@{|/article/${article.id}|}" th:text="${article.subject}"></a>
             <a th:href="@{|/article/${article.id}|}" th:text="${article.content}"></a>
             <a th:href="@{|/article/${article.id}|}" th:text="${article.extra_member_name}"></a>
         </li>
     </ul>
+
+    <button>선택 삭제</button>
 </main>
 
 </html>
